Fixed bug #47721 (Aligment issues in mbstring and sysvshm extension)